--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <p class="story"></p>
     
 
-    <script type="text/javascript" src="./main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
